# face-recognition

./: README.md
face_recognition/: CLEAN.sh  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  face_recognition  face_recognition.cpp
