cmake_minimum_required(VERSION 2.8)
project (face_recognition)
find_package( OpenCV REQUIRED)
include_directories( ${OpenCV_INCLUDE_DIRS})
include_directories(../Eigen3)
add_executable(face_recognition face_recognition.cpp)
target_link_libraries( face_recognition ${OpenCV_LIBS} )
set (CMAKE_CXX_FLAGS "-std=c++11")
